Bug #244969 --> Spell checker fails to catch misspelled words after a "Replace all"

Patch by kiran.s@in.ibm.com

sr=mscott
a=asa